2010-06-19  Olivier Goffart  <olivier.goffart@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Compilation in QWebPagePrivate::timerEvent with clang
        https://bugs.webkit.org/show_bug.cgi?id=40714

        QObject::timerEvent is protected and cannot be accessed by QWebPagePrivate
        with clang

        QWebPagePrivate is a friend of QWebPage and then should have access to
        all protected members of parents of QWebPage, including QObject.
        But the clang team do not want to conform to this aspect of the specification
        because "It is either a drafting error or a horrible mistake."
        See http://llvm.org/bugs/show_bug.cgi?id=6840

        This change is better because QWebPage does not reimplement the timerEvent
        (QWebPagePrivate::timerEvent is called from QWebPage::event)
        So customers that would reimplement their own timerEvent
        for their own timer now get a chance to catch them.


        * Api/qwebpage.cpp:
        (QWebPagePrivate::timerEvent):

2010-06-18  Alexis Menard  <alexis.menard@nokia.com>

        Reviewed by Simon Hausmann.

        [Qt] Fix documentation for the declarative module import.

        * declarative/qdeclarativewebview.cpp:

2010-06-18  Simon Hausmann  <simon.hausmann@nokia.com>

        Reviewed by Antti Koivisto.

        REGRESSION(r60958) [Qt] qwebpage::inputMethods auto-test fails
        https://bugs.webkit.org/show_bug.cgi?id=40830

        When activating a regular input method field, always set or unset the ImhHiddenText
        input method hint.

        * WebCoreSupport/EditorClientQt.cpp:
        (WebCore::EditorClientQt::setInputMethodState):

2010-06-10  Raine Makelainen  <raine.makelainen@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        Impossible to set input method hints based HTML5 input types
        https://bugs.webkit.org/show_bug.cgi?id=40107

        EditorClientQt to set input method hints for "number", "tel",